# plugin-translate

./: Cargo.toml
src/: lib.rs
